playlist wizard + code enhancement